removed redundant quotation mark

--- a/g1/class03/Presentation/04_HTML_CSS/index.html
+++ b/g1/class03/Presentation/04_HTML_CSS/index.html
@@ -137,7 +137,7 @@
 
 
 				<!-- Slide 9 -->
-				<section style="text-align: left; data-background="#fff"">
+				<section style="text-align: left;" data-background="#fff">
 					<h2>Using relative hyperlink URLs</h2>
 					<ul>
 						<li>Relative URL’s are most of the time used for pointing to an internal resources</li>
