Fix for relative links

--- a/g1/class03/Presentation/04_HTML_CSS/index.html
+++ b/g1/class03/Presentation/04_HTML_CSS/index.html
@@ -115,7 +115,7 @@
 
 
 				<!-- Slide 7 -->
-				<section data-background="assets/img/writingLinks.png">
+				<section data-background="assets/img/writingLinks.PNG">
 						<!-- Here the image is showing in the background of the slide -->
 				</section>
 
@@ -171,7 +171,7 @@
 				<!-- Slide 12 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/structure.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/structure.PNG"></div>
 					</div>
 				</section>
 
@@ -180,7 +180,7 @@
 				<!-- Slide 13 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/relativeURLs.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/relativeURLs.PNG"></div>
 					</div>
 				</section>
 
