--- a/g2/Class03/05_HTML_CSS/index.html
+++ b/g2/Class03/05_HTML_CSS/index.html
@@ -475,7 +475,7 @@ alt="350 x 150 pic" usemap="#primary" /&gt;
 				<!-- Slide 35 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/coords.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/coords.jpg"></div>
 					</div>
 				</section>
 
