fix image issue

--- a/g7/06_HTML_CSS/index.html
+++ b/g7/06_HTML_CSS/index.html
@@ -256,7 +256,7 @@
 				<section style="text-align: left;">
 					<p>Tables Homework</p>
 					<div class="sl-block" data-block-type="image" style="width: 50%; height: 50%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/tablesHomework.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/tablesHomework.jpg"></div>
 					</div>
 				</section>
 
