--- a/g7/06_HTML_CSS/index.html
+++ b/g7/06_HTML_CSS/index.html
@@ -172,7 +172,7 @@
 				<!-- Slide 12 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/table1.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/table1.jpg"></div>
 					</div>
 				</section>
 
