--- a/g4/Presentations/07_HTML_CSS/index.html
+++ b/g4/Presentations/07_HTML_CSS/index.html
@@ -92,7 +92,7 @@
 				<section style="text-align: center;">
 					<p>The best known form on the web is probably the search box that sits right in the middle of Google's homepage</p>
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/google.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/google.jpg"></div>
 					</div>
 				</section>
 
