--- a/g2/Class04/06_HTML_CSS/index.html
+++ b/g2/Class04/06_HTML_CSS/index.html
@@ -256,6 +256,7 @@
 					</code></pre>
 						</p>
 					</ul>
+
 				</section>
 
 
@@ -288,7 +289,7 @@
 						so that you will result in a table like on the image below!
 					</p>
 					<b>Hint: Use IMDB data for faster implementation!</b>
-					<img src="./assets/img/Screenshot_1.png" alt="">
+					<img src="./assets/img/Screenshot_1.png" alt="Table Picture">
 				</section>
 
 
