--- a/g2/Class04/06_HTML_CSS/index.html
+++ b/g2/Class04/06_HTML_CSS/index.html
@@ -171,7 +171,7 @@
 				<!-- Slide 12 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/table1.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/table1.jpg"></div>
 					</div>
 				</section>
 
@@ -309,7 +309,7 @@
 				<section style="text-align: left;">
 					<p>Tables Homework</p>
 					<div class="sl-block" data-block-type="image" style="width: 50%; height: 50%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/tablesHomework.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/tablesHomework.jpg"></div>
 					</div>
 				</section>
 
