Presentations - Images Fix

--- a/g5/04_HTML_CSS/index.html
+++ b/g5/04_HTML_CSS/index.html
@@ -116,7 +116,7 @@
 
 
 				<!-- Slide 7 -->
-				<section data-background="assets/img/writingLinks.jpg">
+				<section data-background="assets/img/writingLinks.png">
 						<!-- Here the image is showing in the background of the slide -->
 				</section>
 
@@ -172,7 +172,7 @@
 				<!-- Slide 12 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/structure.jpg"></div>
+					    <div class="sl-block-content"><img src="assets/img/structure.png"></div>
 					</div>
 				</section>
 
@@ -181,7 +181,7 @@
 				<!-- Slide 13 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/relativeURLs.jpg"></div>
+					    <div class="sl-block-content"><img src="assets/img/relativeURLs.png"></div>
 					</div>
 				</section>
 
