--- a/g1/class05/Presentation/07_HTML_CSS/index.html
+++ b/g1/class05/Presentation/07_HTML_CSS/index.html
@@ -91,7 +91,7 @@
 				<section style="text-align: center;">
 					<p>The best known form on the web is probably the search box that sits right in the middle of Google's homepage</p>
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="04e5289dbbcaf1645e860129fe76de6b">
-					    <div class="sl-block-content"><img src="assets/img/google.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/google.jpg"></div>
 					</div>
 				</section>
 
@@ -194,7 +194,7 @@
 
 
 				<!-- Slide 11 -->
-				<section data-background="assets/img/forms.png">
+				<section data-background="assets/img/forms.jpg">
 						<!-- Here the image is showing in the background of the slide -->
 				</section>
 
@@ -571,7 +571,7 @@
 				<section style="text-align: left;">
 					<h2 style="color:#e8643b;">Homework #4</h2>
 					<img src="assets/img/Menu.jpg" alt="form" style="border:none; box-shadow:none;" width="400" />
-					<img src="assets/img/ExampleForm.png" alt="form" style="border:none; box-shadow:none;" width="250" />
+					<img src="assets/img/ExampleForm.jpg" alt="form" style="border:none; box-shadow:none;" width="250" />
 				</section>
 
 	
