code after break 2

--- a/g7/code/class07/index.html
+++ b/g7/code/class07/index.html
@@ -22,7 +22,7 @@
         <article>
             <h3 id="first-title">Lion has arrived</h3>
             <p class="justify color-dark-blue">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque nisi, eius magni voluptatum tenetur dolores eaque earum, quo facilis qui maxime neque porro quod esse dolorum necessitatibus animi rem temporibus?
-                <a href="#">Read more...</a>
+                <a class="link" href="#">Read more...</a>
             </p>
             <p class="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat odit voluptatem nesciunt et recusandae blanditiis dolores adipisci, laboriosam voluptates perspiciatis.
                 <a href="#">Read more...</a>
