--- a/g7/code/class07/index.html
+++ b/g7/code/class07/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLASS 07</title>
+    <!-- Google fonts Roboto import -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
 </head>
 <body>
