Class07 - Presnetation and Code

--- a/g2/Class07/10_HTML_CSS/index.html
+++ b/g2/Class07/10_HTML_CSS/index.html
@@ -48,9 +48,10 @@
 					<h1>HTML5 &amp; CSS3</h1>
 					<h3>CSS</h3>
 					<p>
-						<small>Created by <a href="https://www.facebook.com/jane.dimeski1">Jane Dimeski</a> / <a href="http://twitter.com/janedimeski">@janedimeski</a></small></br>
+						<small>Presented by <a href="https://www.facebook.com/d.jovanov" target="_blank">Dejan Jovanov</a> &amp; <a
+								href="https://www.facebook.com/a.manasiev" target="_blank">Aleksandar Manasiev</a></small></br>
 						<img src="assets/img/lg.png" alt="logo" style="border:none; box-shadow:none;" />
-						
+
 					</p>
 					<small style="font-size: 15px;">© 2020/2021 Seavus Education &amp; Development Center</small>
 				</section>
