--- a/g2/Class07/11_HTML_CSS/index.html
+++ b/g2/Class07/11_HTML_CSS/index.html
@@ -48,9 +48,10 @@
 					<h1>HTML5 &amp; CSS3</h1>
 					<h3>CSS</h3>
 					<p>
-						<small>Created by <a href="https://www.facebook.com/jane.dimeski1">Jane Dimeski</a> / <a href="http://twitter.com/janedimeski">@janedimeski</a></small></br>
+						<small>Presented by <a href="https://www.facebook.com/d.jovanov" target="_blank">Dejan Jovanov</a> &amp; <a
+								href="https://www.facebook.com/a.manasiev" target="_blank">Aleksandar Manasiev</a></small></br>
 						<img src="assets/img/lg.png" alt="logo" style="border:none; box-shadow:none;" />
-						
+
 					</p>
 					<small style="font-size: 15px;">© 2020/2021 Seavus Education &amp; Development Center</small>
 				</section>
@@ -194,7 +195,14 @@ p {
 					</code></pre></p>
 				</section>
 
-
+				<section style="text-align: left;">
+					<h2>Exercise 1</h2>
+					<p>
+						Create a new HTML file and a CSS file that will be linked to it. Try to 
+						implement four divs and give them some styles like the image below!
+					</p>
+					<img src="./assets/img/Exercise_1.png" alt="Exercise one image">
+				</section>
 
 
 				<!-- Slide 21 -->
