--- a/g2/Class07/10_HTML_CSS/index.html
+++ b/g2/Class07/10_HTML_CSS/index.html
@@ -327,7 +327,7 @@ h1 {
 				<!-- Slide 19 -->
 				<section>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="">
-					    <div class="sl-block-content"><img src="assets/img/css_inheritance.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/css_inheritance.jpg"></div>
 					</div>
 				</section>
 
