--- a/g2/Class08/12_HTML_CSS/index.html
+++ b/g2/Class08/12_HTML_CSS/index.html
@@ -77,7 +77,7 @@
 				<section>
 					<h2>Typeface Terminology</h2>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="">
-					    <div class="sl-block-content"><img src="assets/img/text1.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/text1.PNG"></div>
 					</div>
 				</section>
 
@@ -87,7 +87,7 @@
 				<section>
 					<h2>Typeface Terminology</h2>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="">
-					    <div class="sl-block-content"><img src="assets/img/text2.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/text2.PNG"></div>
 					</div>
 				</section>
 
@@ -97,7 +97,7 @@
 				<section>
 					<h2>Choosing a Typeface</h2>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="">
-					    <div class="sl-block-content"><img src="assets/img/text3.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/text3.PNG"></div>
 					</div>
 				</section>
 
@@ -355,7 +355,7 @@ font-size: larger;
 				<section>
 					<h3>Most used units for font-size</h3>		
 					<div class="sl-block" data-block-type="image" style="width: 100%; height: 100%;" data-block-id="">
-					    <div class="sl-block-content"><img src="assets/img/units.png"></div>
+					    <div class="sl-block-content"><img src="assets/img/units.PNG"></div>
 					</div>
 					<p><a href="http://www.w3schools.com/tags/ref_pxtoemconversion.asp" target="_blank">px to em Converter</a></p>
 				</section>
