--- a/g6/Class08/Code_From_Class/index.html
+++ b/g6/Class08/Code_From_Class/index.html
@@ -33,6 +33,20 @@
             <a class="text-decoration" href="#">Click me</a>
         </span>
     </p>
-    
+    <p class="line-height-example">
+        This is some text for example purposes <br>
+        This is the second line of the text <br>
+        This is the third line of the text <br>
+        This is the fourth line of the text 
+    </p>
+    <div class="border-example">
+        <div class="border-example-child">
+            TEXT
+        </div>
+    </div>
+    <p class="shadow-text">
+        This is some text with shadow
+    </p>
+
 </body>
 </html>
