--- a/g5/CSS_code_04__Flexbox-full/flexbox.html
+++ b/g5/CSS_code_04__Flexbox-full/flexbox.html
@@ -27,10 +27,11 @@
                     </section>
                 </article>
 
+                <h3>display:flex</h3>
 
-                 <!-- display:flex -->
+                 <!-- flex-direction -->
                  <article>
-                    <h2>display:flex / flex-direction</h2>
+                    <h2>flex-direction</h2>
                     <section class="parent example-display-flex">
                         <div class="item">1</div>
                         <div class="item">2</div>
